--- a/PlayStream/PlayStream.csproj
+++ b/PlayStream/PlayStream.csproj
@@ -55,25 +55,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Perfil.xaml.cs">
-      <DependentUpon>Perfil.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Series.xaml.cs">
-      <DependentUpon>Series.xaml</DependentUpon>
-    </Compile>
-    <Page Include="InicioLogueado.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="InicioUsuario.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
-    <Page Include="Login.xaml">
+    <Page Include="InicioAdmin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Peliculas.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Perfil.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -85,11 +75,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="InicioLogueado.xaml.cs">
-      <DependentUpon>InicioLogueado.xaml</DependentUpon>
+    <Compile Include="InicioUsuario.xaml.cs">
+      <DependentUpon>InicioUsuario.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Login.xaml.cs">
-      <DependentUpon>Login.xaml</DependentUpon>
+    <Compile Include="InicioAdmin.xaml.cs">
+      <DependentUpon>InicioAdmin.xaml</DependentUpon>
     </Compile>
     <Compile Include="Peliculas.xaml.cs">
       <DependentUpon>Peliculas.xaml</DependentUpon>
@@ -98,10 +88,6 @@
       <DependentUpon>Principal.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Series.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
