Detail del CRUD hecho

--- a/PlayStream/PlayStream.csproj
+++ b/PlayStream/PlayStream.csproj
@@ -158,6 +158,10 @@
       <DependentUpon>BDModel.edmx</DependentUpon>
       <LastGenOutput>BDModel.cs</LastGenOutput>
     </Content>
+    <Resource Include="Resources\add.jpg" />
+    <Resource Include="Resources\borrar.png" />
+    <Resource Include="Resources\Detalles.png" />
+    <Resource Include="Resources\editar.png" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
