--- a/PlayStream/PlayStream.csproj
+++ b/PlayStream/PlayStream.csproj
@@ -41,9 +41,19 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="PdfSharp, Version=1.50.5147.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
+      <HintPath>packages\PDFsharp.1.50.5147\lib\net20\PdfSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="PdfSharp.Charting, Version=1.50.5147.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
+      <HintPath>packages\PDFsharp.1.50.5147\lib\net20\PdfSharp.Charting.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
@@ -101,6 +111,9 @@
     <Compile Include="InicioAdmin.xaml.cs">
       <DependentUpon>InicioAdmin.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\BDJSON.cs" />
+    <Compile Include="Models\drvJSON.cs" />
+    <Compile Include="Models\IDataDriver.cs" />
     <Compile Include="Pelicula.cs">
       <DependentUpon>BDModel.tt</DependentUpon>
     </Compile>
@@ -131,6 +144,8 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>BDModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Assets\movies.json" />
+    <None Include="Assets\provincias.json" />
     <None Include="BDModel.edmx.diagram">
       <DependentUpon>BDModel.edmx</DependentUpon>
     </None>
