--- a/PlayStream/App.config
+++ b/PlayStream/App.config
@@ -16,4 +16,23 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
+	<system.diagnostics>
+		<trace autoflush="true"/>
+		<sources>
+			<source name="PlayStream"  switchName="myswitch" >
+				<listeners>
+					<add name="textWriterListener" traceOutputOptions="DateTime"
+							type="System.Diagnostics.TextWriterTraceListener"
+							initializeData="playStream.log">
+					</add>
+					<remove name="Default" />
+				</listeners>
+			</source>
+		</sources>
+		<switches>
+			<add name="myswitch" value="Verbose" />
+		</switches>
+	</system.diagnostics>
+	
 </configuration>
